# ChangeLog for kde-misc/kfilebox
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kfilebox/ChangeLog,v 1.4 2012/01/09 16:29:21 johu Exp $

  09 Jan 2012; Johannes Huber <johu@gentoo.org> kfilebox-0.4.5.ebuild,
  kfilebox-0.4.7.ebuild:
  Move slot from 0 to 4.

*kfilebox-0.4.7 (11 Sep 2011)

  11 Sep 2011; Theo Chatzimichos <tampakrap@gentoo.org> +kfilebox-0.4.7.ebuild:
  Version bump

  08 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> kfilebox-0.4.5.ebuild:
  Convert from "hasq" to "has".

*kfilebox-0.4.5 (19 Jun 2011)

  19 Jun 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kfilebox-0.4.5.ebuild, +files/kfilebox-0.4.5-installroot.patch,
  +metadata.xml:
  New application, bug 339990. Thanks to Enrico Tagliavini and Paul Healy for
  the initial ebuild and patch.
