@@ -4,18 +4,20 @@ Hash: SHA512
 AUX kfilebox-0.4.5-installroot.patch 11226 RMD160 ed8898f2a6d4c1f75b3f035bbbf5db8b4a9938c9 SHA1 82ea27a6271f5b20f67502a3f87068765f68dc5a SHA256 8968985c5b260245a808298bfd2f2e85b14217399f4d77ccd0b20ec518b9eda9
 DIST kfilebox-0.4.5.tar.gz 60028 RMD160 4581fe61a7c3a42b6a86ff12f06b2f0bbae6bd30 SHA1 459eac9f8cd3525a16bbd5505f3aac30d14d1e0d SHA256 d82875fb47e3cb36953e000a66fbadb17211e69104fec3d05633697812b11b6c
 DIST kfilebox-0.4.7.tar.gz 62814 RMD160 65f45f015005fb61d22617b1f042c8adc11c4184 SHA1 24b7d30c1164672db38dc78cc88014d5243d17cc SHA256 09c46b2f5fd400cfc4b28bfae3e72783f884350bd2744275cb0d3caac1ecb1e6
+DIST kfilebox-0.4.8.tar.gz 72835 RMD160 bee32537c67a61acbbed179acb22a7317aa30ade SHA1 9bb97700d8777ca18416b536ffb447f72f317f4e SHA256 8f2b0719844568863af85251afed5130555bdb0227a8cca884524a6a2dc1fe16
 EBUILD kfilebox-0.4.5.ebuild 862 RMD160 c619a547cc8aa7b00903aaeb3d1ca692d980273f SHA1 7342fad249808cce70d9f9c1f8caf75d161b1680 SHA256 02852f61a95161dff395bb4fb2aa1d6ebb02cfc2c1885c3a6df20ccd99711669
 EBUILD kfilebox-0.4.7.ebuild 768 RMD160 47ab5344bf12a7a8223f7d4a61c3e4eecc634940 SHA1 62afd5e2e71602f1a9135fc89b31e7309a9976f1 SHA256 ee3fd2726df571389f8a4a9dcca4e947ed94bce41988fe8a14c5bedb454cbc2e
-MISC ChangeLog 847 RMD160 04d7dd8923af978f61aeda82fab7dbcc36009f23 SHA1 89dcdf20fb0a8224d206e763e491fee777058a08 SHA256 cd0db9ddf9b1e9d4d91ebc6d8904e862c05e94a255a6d085184136374a914dd1
+EBUILD kfilebox-0.4.8.ebuild 768 RMD160 cd2062a0e71503a1b772a27190c4400676edee9f SHA1 73a2acc97e3ff9fb6ac6a86bef25aabfa7b989ce SHA256 d6dd1021d971bdaeddd1bf3eb05f1204332411bb95718f2d28e6193f7ef57532
+MISC ChangeLog 983 RMD160 7d64f9c090c043f9adeb21b225a9985a5b2d489f SHA1 1c9c056b7d666ad20a294b1854eb4db7a204685e SHA256 09e837c2eaf2657a7155b55e168b78617fdf0c72c05e2fb83093f47970ae807f
 MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPCxW+AAoJEO+t9ga+3I3ahAEIAMK1mES4gxnP0Cdhcm0Zc/Pl
-vfLgIm4vz6KYk+3MizQeVPo3sWJrfQyu6v60Z8l9tP+ULiB6tNUOHE6CyKisHK/W
-17jVjgrTQ71xd58m23wXRqHQNdo3EtA9O3Tu9plPVyo17hTw8f82u/+NL/8PfegY
-72nvZsJC61jT+FQwo1eK/6fll5JBHSa+dMIKl3TYRNndE/AFvLuYGcHBSKYoWQ6L
-xjso89SG4xrG3I6908+HpAcFJBAeGHiPavfIFaKMDQkk2CpVGggY5VkpnLCPrFAu
-+ovxulUlGLP99ONWIQbkSmTOMAv/6nHGxiyeHhtN/9xvdaOieAWlbJwtr4WSfMU=
-=nfRL
+iQEcBAEBCgAGBQJPCxYiAAoJEO+t9ga+3I3aOKEIAKfYRmsmqwIuWj4vRJwrt3fr
+f9JDV98ZQndpxThZ3acF7/Hj02B3e3AJ1pXFJqTLbKdlVoVPvA19ZueOpuPtw5a0
+LbPnx6SO2s2x1ssKLq8VP3rald3mX5a19AwuiFTGWI/zHbA3qIcnhztCAKKFMEvi
+rzqoevKmR1qWZcUUQGWgSNS2IWruDaNhJNRs2VUHYd1RPkaTpdGWEIRCAiwC2nUM
+Y6+umHwloWJDiuDlDNn9TSZk2hAzMVucG1/OEO6EeU+ETjC7ZE0eoBhzN7ihVATq
+98eegIGkt4QWmPJgXn3/adjWEwMsFMU96xfJMXAphCcP0/zfh2W1cIvOrC58BQg=
+=BYm9
 -----END PGP SIGNATURE-----
