@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/kfilebox
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kfilebox/ChangeLog,v 1.4 2012/01/09 16:29:21 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kfilebox/ChangeLog,v 1.5 2012/01/09 16:31:07 johu Exp $
+
+*kfilebox-0.4.8 (09 Jan 2012)
+
+  09 Jan 2012; Johannes Huber <johu@gentoo.org> +kfilebox-0.4.8.ebuild:
+  Version bump wrt bug #398207.
 
   09 Jan 2012; Johannes Huber <johu@gentoo.org> kfilebox-0.4.5.ebuild,
   kfilebox-0.4.7.ebuild:
